recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:4: error: not found: value nbPas
	avance(nbPas=double);
               ^